tests/baselines/reference/typePredicateOnVariableDeclaration02.errors.txt
typePredicateOnVariableDeclaration02.ts(1,8): error TS2304: Cannot find name 'z'.
typePredicateOnVariableDeclaration02.ts(1,10): error TS1005: ',' expected.
typePredicateOnVariableDeclaration02.ts(1,13): error TS1005: ',' expected.


==== typePredicateOnVariableDeclaration02.ts (3 errors) ====
    var y: z is number;
           ~
!!! error TS2304: Cannot find name 'z'.
             ~~
!!! error TS1005: ',' expected.
                ~~~~~~
!!! error TS1005: ',' expected.